improved dark theme for Data Messenger, Fix popover overlap in Data Messenger

--- a/css/ChataTable.css
+++ b/css/ChataTable.css
@@ -1,3 +1,12 @@
+.autoql-vanilla-chata-table .tabulator-tableHolder .tabulator-table{
+    color: var(--chata-drawer-text-color-primary);
+}
+
+.autoql-vanilla-chata-table .tabulator-header{
+    color: var(--chata-drawer-text-color-primary);
+    
+}
+
 .autoql-vanilla-chata-table .tabulator-row {
     border-bottom: 1px solid var(--chata-drawer-border-color);
 }
